Added Mitchell bio and pic

--- a/templates/about.html
+++ b/templates/about.html
@@ -39,7 +39,7 @@
         <ul class="nav nav-tabs">
             <!--<a data-toggle="tab" href="#about">About</a></li>-->
             <li class="active"><li><a data-toggle="tab" href="#aleem">Aleem</a></li>
-            <li><a data-toggle="tab" href="#mitchel">Mitchel</a></li>
+            <li><a data-toggle="tab" href="#mitchel">Mitchell</a></li>
             <li><a data-toggle="tab" href="#nicole">Nicole</a></li>
             <li><a data-toggle="tab" href="#salman">Salman</a></li>
         </ul>
@@ -62,9 +62,14 @@
 		<p>Number of Unit Tests = 0</p>
             </div>
             <div id="mitchel" class="tab-pane fade">
-                <h2>Mitchel Yick</h2>
-                <p>Some content.</p>
-            </div>
+                <h2>Mitchell Yick</h2>
+                <image src ="images/mitchell.jpg" alt = "picture is sleeping">
+                <p>Hey everyone. I'm Mitchell Yick. I am a third year Aerospace Engineering student pursuing a certificate in computer science. I have a high interest in artificial intelligence, and have always been fascinated cars and airplanes. Before learning basic engineering, I learned how to program. My passion for cars and airplanes as well as skills in computer science lead me to look for a way to combine these two fields. With some more education, I would like to combine artificial intelligence and cars to make a functional self-driving car.</p>
+                <p>My major responsibilities for this project is to make sure everything is clear about what needs to be done.</p>
+                <p>Number of Commits = 1</p>
+        <p>Number of Issues = </p>
+        <p>Number of Unit Tests = 0</p>
+</div>
             <div id="nicole" class="tab-pane fade">
                 <h2 style="padding-left: 2ex">Nicole Muzquiz</h2>
                 <p style="padding-bottom: 5ex;"></p>
