Fixed the transitioning between html pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
       <a class="navbar-brand" href="#">Books Galore</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="index.html">Home</a></li>
+      <li class="active"><a href="{{url_for('index')}}">Home</a></li>
       <li><a href="{{url_for('about')}}">About</a></li>
       <li><a href="{{url_for('author')}}">Authors</a></li>
       <li><a href="{{url_for('title')}}">Titles</a></li>
