--- a/templates/publisher.html
+++ b/templates/publisher.html
@@ -56,8 +56,8 @@
 			
 		</tr>
 		<tr>
-            <td><a href='title.html'>Harry Potter and the Sorcerer's Stone</a></td>
-            <td><a href='author.html'>J. K. Rowling</a></td>
+            <td><a href="{{url_for('title')}}">Harry Potter and the Sorcerer's Stone</a></td>
+            <td><a href="{{url_for('author')}}">J. K. Rowling</a></td>
             <td>Pottermore</td>
             <td>J. K. Rowling</td>
 			<td>Pottermore is the digital publishing, e-commerce, entertainment, and news company from J.K. Rowling and is the global digital publisher of Harry Potter and J.K. Rowling's Wizarding World.</td>
