--- a/templates/about.html
+++ b/templates/about.html
@@ -63,7 +63,7 @@
             </div>
             <div id="mitchel" class="tab-pane fade">
                 <h2>Mitchell Yick</h2>
-                <image src ="images/mitchell.jpg" alt = "picture is sleeping">
+                <image src ="static/images/mitchell.JPG" alt = "picture is sleeping">
                 <p>Hey everyone. I'm Mitchell Yick. I am a third year Aerospace Engineering student pursuing a certificate in computer science. I have a high interest in artificial intelligence, and have always been fascinated cars and airplanes. Before learning basic engineering, I learned how to program. My passion for cars and airplanes as well as skills in computer science lead me to look for a way to combine these two fields. With some more education, I would like to combine artificial intelligence and cars to make a functional self-driving car.</p>
                 <p>My major responsibilities for this project is to make sure everything is clear about what needs to be done.</p>
                 <p>Number of Commits = 1</p>
