--- a/templates/author.html
+++ b/templates/author.html
@@ -59,8 +59,8 @@
 			<td>University of Exeter</td>
 			<td>https://en.wikipedia.org/wiki/J._K._Rowling</td>
 			<td><img href = "http://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/J._K._Rowling_2010.jpg/220px-J._K._Rowling_2010.jpg"></td>
-			<td><a href='title.html'>Harry Potter and the Sorcerer's Stone</a></td>
-			<td><a href='publisher.html'>Pottermore</a></td>
+			<td><a href="{{url_for('title')}}">Harry Potter and the Sorcerer's Stone</a></td>
+			<td><a href="{{url_for('publisher')}}">Pottermore</a></td>
 		</tr>
 </body>
 
