--- a/templates/title.html
+++ b/templates/title.html
@@ -56,8 +56,8 @@
 			<td>2015-12-08</td>
 			<td>https://books.google.com/books/content/images/frontcover/wrOQLV6xB-wC?fife=w500</td>
 			<td>Turning the envelope over, his hand trembling, Harry saw a purple wax seal bearing a coat of arms; a lion, an eagle, a badger and a snake surrounding a large letter 'H'.\" Harry Potter has never even heard of Hogwarts when the letters start dropping on the doormat at number four, Privet Drive. Addressed in green ink on yellowish parchment with a purple seal, they are swiftly confiscated by his grisly aunt and uncle. Then, on Harry's eleventh birthday, a great beetle-eyed giant of a man called Rubeus Hagrid bursts in with some astonishing news: Harry Potter is a wizard, and he has a place at Hogwarts School of Witchcraft and Wizardry. An incredible adventure is about to begin!</td>
-			<td><a href='publisher.html'>Pottermore</a></td>
-			<td><a href='author.html'>J. K. Rowling</a></td>
+			<td><a href="{{url_for('publisher')}}">Pottermore</a></td>
+			<td><a href="{{url_for('author')}}">J. K. Rowling</a></td>
 		</tr>
 </body>
 
