Inputted most of the data

--- a/templates/about.html
+++ b/templates/about.html
@@ -63,7 +63,7 @@
             </div>
             <div id="mitchel" class="tab-pane fade">
                 <h2>Mitchell Yick</h2>
-                <image src ="static/images/mitchell.JPG" alt = "picture is sleeping">
+                <img src="static/images/yick.jpg" alt = "picture is sleeping" class="">
                 <p>Hey everyone. I'm Mitchell Yick. I am a third year Aerospace Engineering student pursuing a certificate in computer science. I have a high interest in artificial intelligence, and have always been fascinated cars and airplanes. Before learning basic engineering, I learned how to program. My passion for cars and airplanes as well as skills in computer science lead me to look for a way to combine these two fields. With some more education, I would like to combine artificial intelligence and cars to make a functional self-driving car.</p>
                 <p>My major responsibilities for this project is to make sure everything is clear about what needs to be done.</p>
                 <p>Number of Commits = 1</p>
@@ -96,6 +96,10 @@
             </div>
         </div>
     </div>
+    <h1>Group Name: Books Galore</h1>
+<p>Lorem Epsum</p>
+<p>Lorem Epsum</p>
+<p>Lorem Epsum</p>
 	<!--<h1>About</h1><hr />
 	<h2>Group Name</h2>
 	<table BORDER = "2">
