--- a/templates/publisher.html
+++ b/templates/publisher.html
@@ -61,12 +61,32 @@
             <td>Pottermore</td>
             <td>J. K. Rowling</td>
 			<td>Pottermore is the digital publishing, e-commerce, entertainment, and news company from J.K. Rowling and is the global digital publisher of Harry Potter and J.K. Rowling's Wizarding World.</td>
-			<td><img href = "http://upload.wikimedia.org/wikipedia/en/thumb/6/6f/Pottermore.png/225px-Pottermore.png"img></td>
-			<td>http://www.pottermore.com\nshop.pottermore.com</td>
-            <td>https://en.wikipedia.org/wiki/Pottermore</td>
+			<td><img src = "static/images/Pottermore.png" alt="http://upload.wikimedia.org/wikipedia/en/thumb/6/6f/Pottermore.png/225px-Pottermore.png"></td>
+			<td><a href = "http://www.pottermore.com\nshop.pottermore.com">http://www.pottermore.com\nshop.pottermore.com</a></td>
+            <td><a href= "https://en.wikipedia.org/wiki/Pottermore"> https://en.wikipedia.org/wiki/Pottermore</a></td>
 			
             
 		</tr>
+    <tr>
+            <td><a href="{{url_for('title')}}">Animal Farm</a></td>
+            <td><a href="{{url_for('author')}}">George Orwell</a></td>
+            <td>Scholastic Corporation</td>
+            <td>Scholastic Corporation</td>
+      <td>Scholastic Corporation is an American publishing, education and media company known for publishing, selling, and distributing books and educational materials for schools, teachers, parents, and children.</td>
+      <td><img src = "static/images/Scholastic.JPG" alt="http://upload.wikimedia.org/wikipedia/commons/thumb/1/1c/Scholastic_Headquarters_by_Matthew_Bisanz.JPG/240px-Scholastic_Headquarters_by_Matthew_Bisanz.JPG"></td>
+      <td><a href = "http://www.scholastic.com">http://www.scholastic.com </a></td>
+            <td><a href ='https://en.wikipedia.org/wiki/Scholastic_Corporation'> https://en.wikipedia.org/wiki/Scholastic_Corporation</a></td>
+    </tr>
+    <tr>
+            <td><a href="{{url_for('title')}}">The Very Hungry Caterpillar</a></td>
+            <td><a href="{{url_for('author')}}">Eric Carle</a></td>
+            <td>Penguin Group</td>
+            <td>Penguin Random House</td>
+      <td>The Penguin Group is a trade book publisher, part of Penguin Random House. It is owned by Pearson PLC, the global education and publishing company, and Bertelsmann, the German media conglomerate.</td>
+      <td><img src = "static/images/Penguin_logo.svg.png" alt="https://upload.wikimedia.org/wikipedia/en/thumb/1/1c/Penguin_logo.svg/150px-Penguin_logo.svg.png"></td>
+      <td><a href = "http://PenguinGroup.com">http://PenguinGroup.com</a></td>
+            <td>N/A</td>
+    </tr>
 
 </body>
 
