--- a/templates/title.html
+++ b/templates/title.html
@@ -54,10 +54,20 @@
 			<td>Harry Potter and the Sorcerer's Stone</td>
 			<td>9781781100486</td>
 			<td>2015-12-08</td>
-			<td>https://books.google.com/books/content/images/frontcover/wrOQLV6xB-wC?fife=w500</td>
+			<td><img src = "static/images/h1.jpg" alt = "https://books.google.com/books/content/images/frontcover/wrOQLV6xB-wC?fife=w500"</td>
 			<td>Turning the envelope over, his hand trembling, Harry saw a purple wax seal bearing a coat of arms; a lion, an eagle, a badger and a snake surrounding a large letter 'H'.\" Harry Potter has never even heard of Hogwarts when the letters start dropping on the doormat at number four, Privet Drive. Addressed in green ink on yellowish parchment with a purple seal, they are swiftly confiscated by his grisly aunt and uncle. Then, on Harry's eleventh birthday, a great beetle-eyed giant of a man called Rubeus Hagrid bursts in with some astonishing news: Harry Potter is a wizard, and he has a place at Hogwarts School of Witchcraft and Wizardry. An incredible adventure is about to begin!</td>
 			<td><a href="{{url_for('publisher')}}">Pottermore</a></td>
 			<td><a href="{{url_for('author')}}">J. K. Rowling</a></td>
+		</tr>
+		<tr>
+			<td>huZBDAAAQBAJ</td>
+			<td>Animal Farm</td>
+			<td>N/A</td>
+			<td>2016-05-30</td>
+			<td><img src="static/images/animal_farm.jpg" alt = "https://books.google.com/books/content/images/frontcover/huZBDAAAQBAJ?fife=w500"></td>
+			<td>Tired of their servitude to man, a group of farm animals revolt and establish their own society, only to be betrayed into worse servitude by their leaders, the pigs, whose slogan becomes: \"All animals are equal, but some animals are more equal than others.\" This 1945 satire addresses the socialist/communist philosophy of Stalin in the Soviet Union.</td>
+			<td><a href="{{url_for('publisher')}}">Scholastic Corporation</a></td>
+			<td><a href="{{url_for('author')}}">George Orwell </a></td>
 		</tr>
 </body>
 
