Added caterpillar info and chagned about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -97,9 +97,33 @@
         </div>
     </div>
     <h1>Group Name: Books Galore</h1>
-<p>Lorem Epsum</p>
-<p>Lorem Epsum</p>
-<p>Lorem Epsum</p>
+<h2>Group Members:</h2>
+<ul>
+<li>Aleem Ali</li>
+<li>Mitchell Yick</li>
+<li>Nicole Muzquiz</li>
+<li>Salman Charolia</li>
+</ul>
+<h2>Stats Regarding this Project:</h2>
+<ul>
+<li>Total Number of Commits = </li>
+<li>Total Number of Issues = </li>
+<li>Total Number of Unit Tests = </li>
+<li>Git Hub Issue Tracker Link = <a href="https://github.com/mitchellyick/cs329e-idb/issues">https://github.com/mitchellyick/cs329e-idb/issues</a></li>
+<li>Git Hub Repo Link = <a href="https://github.com/mitchellyick/cs329e-idb">https://github.com/mitchellyick/cs329e-idb</a></li>
+<li>Git Hub Wiki Link = <a href="https://github.com/mitchellyick/cs329e-idb/wiki">https://github.com/mitchellyick/cs329e-idb/wiki</a></li>
+</ul>
+<h2> Data Set: </h2>
+<p>Attach link here</p>
+<h2> Tools Used: </h2>
+<ul>
+<li>Google Cloud Platform</li>
+<li>Flask</li>
+<li>Bootstrap</li>
+<li>Python</li>
+<li>GitHub</li>
+</ul>
+
 	<!--<h1>About</h1><hr />
 	<h2>Group Name</h2>
 	<table BORDER = "2">
