--- a/templates/title.html
+++ b/templates/title.html
@@ -69,6 +69,16 @@
 			<td><a href="{{url_for('publisher')}}">Scholastic Corporation</a></td>
 			<td><a href="{{url_for('author')}}">George Orwell </a></td>
 		</tr>
+		<tr>
+			<td>0CxcAAAACAAJ</td>
+			<td>The Very Hungry Caterpillar</td>
+			<td>0141380322</td>
+			<td>2003</td>
+			<td><img src="static/images/caterpillar.jpg" alt = "https://books.google.com/books/content/images/frontcover/0CxcAAAACAAJ?fife=w500"></td>
+			<td>This much-loved classic picture book follows the caterpillar's week while he eats through a range of foods in preparation for his hibernation and subsequent appearance as a beautiful butterfly. With its die-cut pages and holes to explore, this is a richly satisfying book for children. The cuddly caterpillar toy can be pushed through the giant holes as children follow this simple, hopeful story.</td>
+			<td><a href="{{url_for('publisher')}}">Penguin Group</a></td>
+			<td><a href="{{url_for('author')}}">Eric Carle</a></td>
+		</tr>
 </body>
 
 </html>
