--- a/templates/author.html
+++ b/templates/author.html
@@ -57,7 +57,7 @@
 			<td>British</td>
 			<td>Joanne \"Jo\" Rowling, OBE, FRSL, pen names J. K. Rowling and Robert Galbraith, is a British novelist, screenwriter and film producer best known as the author of the Harry Potter fantasy series.</td>
 			<td>University of Exeter</td>
-			<td><a href = "https://en.wikipedia.org/wiki/J._K._Rowling"> Wiki for Rowling</a></td>
+			<td><a href = "https://en.wikipedia.org/wiki/J._K._Rowling">https://en.wikipedia.org/wiki/J._K._Rowling</a></td>
 			<td><img src = "static/images/J._K._Rowling_2010.jpg" alt="http://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/J._K._Rowling_2010.jpg/220px-J._K._Rowling_2010.jpg" class=""></td>
 			<td><a href="{{url_for('title')}}">Harry Potter and the Sorcerer's Stone</a></td>
 			<td><a href="{{url_for('publisher')}}">Pottermore</a></td>
@@ -69,7 +69,7 @@
 			<td>N/A</td>
 			<td>Eric Arthur Blair, who used the pen name George Orwell, was an English novelist, essayist, journalist and critic. His work is marked by lucid prose, awareness of social injustice, opposition to totalitarianism, and outspoken support of democratic socialism.</td>
 			<td>Eton College</td>
-			<td><a href = "https://en.wikipedia.org/wiki/George_Orwell">Wiki for Orwell</a></td>
+			<td><a href = "https://en.wikipedia.org/wiki/George_Orwell">https://en.wikipedia.org/wiki/George_Orwell</a></td>
 			<td><img src = "static/images/George_Orwell_press_photo.jpg" alt="http://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/George_Orwell_press_photo.jpg/220px-George_Orwell_press_photo.jpg" class=""></td>
 			<td><a href="{{url_for('title')}}">Animal Farm</a></td>
 			<td><a href="{{url_for('publisher')}}">Scholastic Corporation</a></td>
@@ -81,7 +81,7 @@
 			<td>American</td>
 			<td>Eric Carle is an American designer, illustrator, and writer of children's books. He is most famous for The Very Hungry Caterpillar, a picture book with few words that has been translated into more than 62 languages and sold more than 44 million copies.</td>
 			<td>Academy of Fine Arts Stuttgart\nAcademy of Fine Arts Vienna</td>
-			<td><a href="https://en.wikipedia.org/wiki/Eric_Carle">Wiki for Carle</a></td>
+			<td><a href="https://en.wikipedia.org/wiki/Eric_Carle">https://en.wikipedia.org/wiki/Eric_Carle</a></td>
 			<td>N/A</td>
 			<td><a href="{{url_for('title')}}">The Very Hungry Caterpillar</a></td>
 			<td><a href="{{url_for('publisher')}}">Penguin Group</a></td>
