Implemented sorted code and final touchups

--- a/templates/about.html
+++ b/templates/about.html
@@ -53,22 +53,22 @@
 -->
             <div id="aleem" class="tab-pane fade">
                 <h2>Aleem Ali</h2>
-		<img src="static/images/DSC_0065.JPG" alt="404 no penguin here" class="">
+		<img src="static/images/DSC_0065.JPG" alt="404 no Aleem here" class="">
 		<p>&nbsp
                 <p>I am a third year mechanical engineering student and I am also pursuing certificates in business and computer science. My goal is to have a career in the aerospace/aeronautics industry. I like coding because it is a challanging task that makes you think logically and find innovative ways to solve a problem. I hope to apply the skills I learn in this class in my professional life.</p>
-		<p>My major responsibilites for this project are ...</p>
+		<p>My major responsibilites for this project are making sure that the wiki page is up to  date and creating the templates of the html files needed so that we can add features onto it.</p>
 		<p>Number of Commits = 3</p>
 		<p>Number of Issues = 1</p>
-		<p>Number of Unit Tests = 0</p>
+		<p>Number of Unit Tests = N/A</p>
             </div>
             <div id="mitchel" class="tab-pane fade">
                 <h2>Mitchell Yick</h2>
                 <img src="static/images/yick.jpg" alt = "picture is sleeping" class="">
                 <p>Hey everyone. I'm Mitchell Yick. I am a third year Aerospace Engineering student pursuing a certificate in computer science. I have a high interest in artificial intelligence, and have always been fascinated cars and airplanes. Before learning basic engineering, I learned how to program. My passion for cars and airplanes as well as skills in computer science lead me to look for a way to combine these two fields. With some more education, I would like to combine artificial intelligence and cars to make a functional self-driving car.</p>
                 <p>My major responsibilities for this project is to make sure everything is clear about what needs to be done.</p>
-                <p>Number of Commits = 1</p>
-        <p>Number of Issues = </p>
-        <p>Number of Unit Tests = 0</p>
+                <p>Number of Commits = 2</p>
+        <p>Number of Issues = 10</p>
+        <p>Number of Unit Tests = N/A</p>
 </div>
             <div id="nicole" class="tab-pane fade">
                 <h2 style="padding-left: 2ex">Nicole Muzquiz</h2>
@@ -80,9 +80,9 @@
                 <h4>Major Responsibilities</h4>
                     <p>Make this pretty and get it working</p>
                 <br />
-                <p>Number of Commits = </p>
-                <p>Number of Issues = </p>
-                <p>Number of Unit Tests = </p>
+                <p>Number of Commits = 7 </p>
+                <p>Number of Issues = 1 </p>
+                <p>Number of Unit Tests = N/A</p>
             </div>
             <div id="salman" class="tab-pane fade">
                 <h2>Salman Charolia</h2>
@@ -90,9 +90,9 @@
             <p>&nbsp
                 <p>Hello Everyone! My name is Salman Charolia and I am a third year mechanical engineering student. I am also pursuing a certifiate in Computer Science. I am very interested in problem solving which is why I love computer science, engineering, and entreprenership since there is some aspect of problem solving in each of these careers. I am glad that UT offers the CS certificate because I have gained useful skills from these classes. </p>
             <p>My major responsibilites for this project are to ensure we are meeting all requirements and making sure everyone is learning throughout the whole process because me and a few others don't know HTML so this is a great way to learn. </p>
-            <p>Number of Commits = ##</p>
-            <p>Number of Issues = ##</p>
-            <p>Number of Unit Tests = ##</p>
+            <p>Number of Commits = 14</p>
+            <p>Number of Issues = 3</p>
+            <p>Number of Unit Tests = N/A</p>
             </div>
         </div>
     </div>
@@ -106,15 +106,17 @@
 </ul>
 <h2>Stats Regarding this Project:</h2>
 <ul>
-<li>Total Number of Commits = </li>
-<li>Total Number of Issues = </li>
-<li>Total Number of Unit Tests = </li>
+<li>Total Number of Commits = 26</li>
+<li>Total Number of Issues = 15</li>
+<li>Total Number of Unit Tests = N/A</li>
 <li>Git Hub Issue Tracker Link = <a href="https://github.com/mitchellyick/cs329e-idb/issues">https://github.com/mitchellyick/cs329e-idb/issues</a></li>
 <li>Git Hub Repo Link = <a href="https://github.com/mitchellyick/cs329e-idb">https://github.com/mitchellyick/cs329e-idb</a></li>
 <li>Git Hub Wiki Link = <a href="https://github.com/mitchellyick/cs329e-idb/wiki">https://github.com/mitchellyick/cs329e-idb/wiki</a></li>
 </ul>
 <h2> Data Set: </h2>
-<p>Attach link here</p>
+<ul>
+<li><a href="http://www.cs.utexas.edu/~fares/cs329ef17/CS%20373_files/tutorials/books.json">books.json</a></li>
+</ul>
 <h2> Tools Used: </h2>
 <ul>
 <li>Google Cloud Platform</li>
