--- a/templates/title.html
+++ b/templates/title.html
@@ -37,17 +37,18 @@
   </div>
 </nav>
 <h1> Titles </h1><hr/>
+<h4> Click on the table heading to sort (1 click: A-Z, 2 clicks: Z-A)</h4>
 
-<table BORDER = "2">
+<table BORDER = "2" id = "myTable">
 		<tr>
-			<th>Google ID</th>
-			<th>Title</th>
-			<th>ISBN</th>
-			<th>Publication Date</th>
-			<th>Image</th>
-			<th>Description</th>
-			<th>Publishers</th>
-			<th>Author</th>
+			<th onclick="sortTable(0)">Google ID</th>
+			<th onclick="sortTable(1)">Title</th>
+			<th onclick="sortTable(2)">ISBN</th>
+			<th onclick="sortTable(3)">Publication Date</th>
+			<th onclick="sortTable(4)">Image</th>
+			<th onclick="sortTable(5)">Description</th>
+			<th onclick="sortTable(6)">Publishers</th>
+			<th onclick="sortTable(7)">Author</th>
 		</tr>
 		<tr>
 			<td>wrOQLV6xB-wC</td>
@@ -79,6 +80,64 @@
 			<td><a href="{{url_for('publisher')}}">Penguin Group</a></td>
 			<td><a href="{{url_for('author')}}">Eric Carle</a></td>
 		</tr>
+
+		<script>
+function sortTable(n) {
+  var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
+  table = document.getElementById("myTable");
+  switching = true;
+  //Set the sorting direction to ascending:
+  dir = "asc"; 
+  /*Make a loop that will continue until
+  no switching has been done:*/
+  while (switching) {
+    //start by saying: no switching is done:
+    switching = false;
+    rows = table.getElementsByTagName("TR");
+    /*Loop through all table rows (except the
+    first, which contains table headers):*/
+    for (i = 1; i < (rows.length - 1); i++) {
+      //start by saying there should be no switching:
+      shouldSwitch = false;
+      /*Get the two elements you want to compare,
+      one from current row and one from the next:*/
+      x = rows[i].getElementsByTagName("TD")[n];
+      y = rows[i + 1].getElementsByTagName("TD")[n];
+      /*check if the two rows should switch place,
+      based on the direction, asc or desc:*/
+      if (dir == "asc") {
+        if (x.innerHTML.toLowerCase() > y.innerHTML.toLowerCase()) {
+          //if so, mark as a switch and break the loop:
+          shouldSwitch= true;
+          break;
+        }
+      } else if (dir == "desc") {
+        if (x.innerHTML.toLowerCase() < y.innerHTML.toLowerCase()) {
+          //if so, mark as a switch and break the loop:
+          shouldSwitch= true;
+          break;
+        }
+      }
+    }
+    if (shouldSwitch) {
+      /*If a switch has been marked, make the switch
+      and mark that a switch has been done:*/
+      rows[i].parentNode.insertBefore(rows[i + 1], rows[i]);
+      switching = true;
+      //Each time a switch is done, increase this count by 1:
+      switchcount ++;      
+    } else {
+      /*If no switching has been done AND the direction is "asc",
+      set the direction to "desc" and run the while loop again.*/
+      if (switchcount == 0 && dir == "asc") {
+        dir = "desc";
+        switching = true;
+      }
+    }
+  }
+}
+</script>
+
 </body>
 
 </html>
