--- a/templates/title.html
+++ b/templates/title.html
@@ -54,7 +54,14 @@
       {% for i in books %}
       <tr>
         <td>{{i.publication_date}}</td>
-        
+         <td>{{i.title}}</td>
+          <td>{{i.google_id}}</td>
+          <td>{{i.isbn}}</td>
+          <td>{{i.publication_date}}</td>
+          <td>{{i.image_url}}</td>
+          <td>{{i.description}}</td>
+          <td>{{i.author}}</td>
+          <td>{{i.publisher}}</td>
       </tr>
       {% endfor %}
   </tbody>
