--- a/templates/author.html
+++ b/templates/author.html
@@ -56,7 +56,7 @@
 		</tr>
   </thead>
   <tbody>
-   {% for i in books %}
+   {% for i in auths %}
       <tr>
         <td>{{i.title.publication_date}}</td>
         <td>{{i.title}}</td>
