--- a/templates/title.html
+++ b/templates/title.html
@@ -47,7 +47,7 @@
 		<tbody>
       {% for i in books %}
       <tr>
-        <td>{{i.publication_date}}</td>
+        <td>{{i.title}}</td>
          
       </tr>
       {% endfor %}
