--- a/templates/title.html
+++ b/templates/title.html
@@ -45,6 +45,9 @@
 
 		</tr>
 		<tbody>
+      {if books == []}
+      <tr> NOthing</tr>
+      
       {% for i in books %}
       <tr>
         <td>{{i.title}}</td>
