--- a/templates/title.html
+++ b/templates/title.html
@@ -41,23 +41,29 @@
 
 <table BORDER = "2" id = "myTable">
 		<tr>
-			<th onclick="sortTable(0)">Google ID</th>
+      <th onclick="sortTable(0)">Google ID</th>
+      <th onclick="sortTable(1)">Title</th>
+      <th onclick="sortTable(2)">ISBN</th>
+      <th onclick="sortTable(3)">Publication Date</th>
+      <th onclick="sortTable(4)">Image</th>
+      <th onclick="sortTable(5)">Description</th>
+      <th onclick="sortTable(6)">Publishers</th>
+      <th onclick="sortTable(7)">Author</th>
 
 		</tr>
 		<tbody>
-    
-        {% if books == [] %}
-          <td>No books exist</td> 
-      
-        {% else %}
-          {% for i in books %}
-            <td> 
-              {{i.title}}
-          
-            <br/> <br/>
-            </td>
-          {% endfor %}
-        {% endif %}
+      {% for i in books %}
+      <tr>
+        <td>{{i.google_id}}</td>
+        <td>{{i.title}}</td>
+        <td>{{i.isbn}}</td>
+        <td>{{i.publication_date}}</td>
+        <td>{{i.image_url}}</td>
+        <td>{{i.description}}</td>
+        <td>{{i.publisher}}</td>
+        <td>{{i.author}}</td>
+      </tr>
+      {% endfor %}
   </tbody>
 </table>
     <!--<tr>
