--- a/templates/title.html
+++ b/templates/title.html
@@ -11,6 +11,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -36,10 +39,11 @@
     </ul>
   </div>
 </nav>
+
 <h1> Titles </h1><hr/>
 <h4> Click on the table heading to sort (1 click: A-Z, 2 clicks: Z-A)</h4>
-
-<table BORDER = "2" id = "myTable">
+<div width="90%">
+<table id = "table" BORDER = "2" id = "myTable" >
 		<tr>
       <th onclick="sortTable(0)">Google ID</th>
       <th onclick="sortTable(1)">Title</th>
@@ -71,6 +75,8 @@
       {% endfor %}
   </tbody>
 </table>
+</div>
+
     <!--<tr>
 			<td>wrOQLV6xB-wC</td>
 			<td>Harry Potter and the Sorcerer's Stone</td>
@@ -157,7 +163,11 @@ function sortTable(n) {
     }
   }
 }
+
+    </script>
 </script>
+ <script>
+
 
 </body>
 
