--- a/templates/title.html
+++ b/templates/title.html
@@ -120,7 +120,7 @@
 		<script>
 function sortTable(n) {
   var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
-  table = document.getElementById("myTable");
+  table = document.getElementById("table");
   switching = true;
   //Set the sorting direction to ascending:
   dir = "asc"; 
