pagination on title.html?

--- a/templates/title.html
+++ b/templates/title.html
@@ -16,7 +16,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.js"></script>
   <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.css">
-  <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.js"></script>
+  <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
 </head>
 
 <body>
@@ -82,7 +82,9 @@
 
 <script type="text/javascript">
  $(document).ready(function() {
-    $('#table').DataTable();
+    $('#table').DataTable({
+      "pagingType": "full_numbers"
+    });
  }
  </script>
 
