--- a/templates/author.html
+++ b/templates/author.html
@@ -125,7 +125,7 @@
 
 function sortTable(n) {
   var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
-  table = document.getElementById("myTable");
+  table = document.getElementById("table");
   switching = true;
   //Set the sorting direction to ascending:
   dir = "asc"; 
